null check for headers before reading

Creating an empty file in chromeos such as 'test.m4a'
causes FileManager app and browser process to crash
when non-existent headers are dereferenced.

When a file is empty, or headers are not present for any
other reason, length is reported as 0.

Bug: 813480
Change-Id: Icf261d97834ffd0d9231e342fb539e882ec7eb1a
Reviewed-on: https://chromium-review.googlesource.com/927830
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538234}
Former-commit-id: a23af1e22bf15ca584ee47344800890a83c25943