extensions/browser/blob_reader.cc
@@ -87,7 +87,8 @@ void BlobReader::OnURLFetchComplete(const net::URLFetcher* source) {
   std::unique_ptr<std::string> response(new std::string);
   int64_t first = 0, last = 0, length = 0;
   source->GetResponseAsString(response.get());
-  source->GetResponseHeaders()->GetContentRangeFor206(&first, &last, &length);
+  if (source->GetResponseHeaders())
+    source->GetResponseHeaders()->GetContentRangeFor206(&first, &last, &length);
   callback_.Run(std::move(response), length);
 
   delete this;
